WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167399
Atomics.store should return the int-converted value according to toInteger
https://bugs.webkit.org/show_bug.cgi?id=167399
Summary
Atomics.store should return the int-converted value according to toInteger
Filip Pizlo
Reported
2017-01-24 17:23:15 PST
Pathc forthcoming.
Attachments
the patch
(7.46 KB, patch)
2017-01-24 18:01 PST
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-01-24 17:24:14 PST
<
rdar://problem/30178458
>
Filip Pizlo
Comment 2
2017-01-24 18:01:23 PST
Created
attachment 299659
[details]
the patch
Saam Barati
Comment 3
2017-01-24 18:06:41 PST
Comment on
attachment 299659
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=299659&action=review
> JSTests/stress/atomics-store-return.js:14 > +result = Atomics.store(a, 0, 4000000000); > if (result != 4000000000) > throw "Error: bad result: " + result; > +result = Atomics.store(a, 0, -4000000000); > +if (result != -4000000000) > + throw "Error: bad result: " + result;
Can you add a valueOf test too?
Filip Pizlo
Comment 4
2017-01-24 18:09:37 PST
(In reply to
comment #3
)
> Comment on
attachment 299659
[details]
> the patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=299659&action=review
> > > JSTests/stress/atomics-store-return.js:14 > > +result = Atomics.store(a, 0, 4000000000); > > if (result != 4000000000) > > throw "Error: bad result: " + result; > > +result = Atomics.store(a, 0, -4000000000); > > +if (result != -4000000000) > > + throw "Error: bad result: " + result; > > Can you add a valueOf test too?
Good idea. Will do.
Filip Pizlo
Comment 5
2017-01-24 18:59:16 PST
Landed in
https://trac.webkit.org/changeset/211129
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug